monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0277/A0277c.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A0277;

grammar A0277c extends de.monticore.grammar.cocos.invalid.A0277.A0277a{

    abstract C extends A;

    X = A;

}
